# moszir_cpp

./: .gitignore  CMakeLists.txt  README.md  google_benchmark.cmake  google_test.cmake
aoc/: CMakeLists.txt  add_aoc_executable.cmake  add_aoc_gtest.cmake
aoc/2024/: CMakeLists.txt
aoc/2024/day_01/: CMakeLists.txt  main.cpp  main_gtest.cpp  solver.hpp
aoc/2024/day_02/: CMakeLists.txt  main.cpp  main_gtest.cpp  problem.md  solver.hpp
aoc/2024/day_03/: CMakeLists.txt  main.cpp  main_gtest.cpp  solver.hpp
aoc/2024/day_04/: CMakeLists.txt  main.cpp  main_gtest.cpp  problem.md  solver.hpp
aoc/2024/day_05/: CMakeLists.txt  main.cpp  main_gtest.cpp  problem.md  solver.hpp
aoc/2024/day_17/: CMakeLists.txt  main.cpp  main_gtest.cpp  problem.md  solver.hpp
aoc/2024/day_25/: main.cpp  main_gtest.cpp  problem.md  (+1 more)
aoc/common/: CMakeLists.txt
aoc/template/: CMakeLists.txt  main_gtest.cpp  solver.hpp
aoc_2024/: CMakeLists.txt
aoc_2024/day_01/: day_01.cpp  problem.md
aoc_2024/day_02/: day_02.cpp
aoc_2024/day_03/: day_03.cpp  problem.md
aoc_2024/day_17/: day_17.cpp  problem.md
cmake/: find_google_benchmark.cmake  find_googletest.cmake
lib/: CMakeLists.txt
lib/moszir/: conversions.hpp  ifstream.hpp  string.hpp  string_table.hpp  unordered_map.hpp  vector.hpp
lib_benchmarks/: CMakeLists.txt  vector_benchmarks.cpp
lib_tests/: CMakeLists.txt
lib_tests/conversions/: CMakeLists.txt  vector_to_string.cpp
lib_tests/vector/: CMakeLists.txt  equals.cpp  sort.cpp
string_chopper/: CMakeLists.txt  string_chopper_benchmarks.cpp  string_chopper_tests.cpp
(+1 files in other folders)
